# rmfile-python

./: README.md  pyproject.toml
rmfile/: __main__.py  core.py
